// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiEmptyPrompt is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiEmptyPrompt testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    color="subdued"
    data-ouiicon-type="arrowUp"
  />
  <div
    class="ouiSpacer ouiSpacer--m"
  />
  <h2
    class="ouiTitle ouiTitle--medium"
  >
    Title
  </h2>
  <span
    class="ouiTextColor ouiTextColor--subdued"
  >
    <div
      class="ouiSpacer ouiSpacer--m"
    />
    <div
      class="ouiText ouiText--medium"
    >
      <p>
        Body
      </p>
    </div>
  </span>
  <div
    class="ouiSpacer ouiSpacer--l"
  />
  <div>
    Actions
  </div>
</div>
`;

exports[`OuiEmptyPrompt props actions renders alone 1`] = `
<div
  class="ouiEmptyPrompt"
>
  <div
    class="ouiSpacer ouiSpacer--l"
  />
  actions
</div>
`;

exports[`OuiEmptyPrompt props actions renders an array 1`] = `
<div
  class="ouiEmptyPrompt"
>
  <div
    class="ouiSpacer ouiSpacer--l"
  />
  <div
    class="ouiFlexGroup ouiFlexGroup--gutterMedium ouiFlexGroup--alignItemsCenter ouiFlexGroup--justifyContentCenter ouiFlexGroup--directionColumn ouiFlexGroup--responsive"
  >
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    >
      action1
    </div>
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    >
      action2
    </div>
  </div>
</div>
`;

exports[`OuiEmptyPrompt props body renders alone 1`] = `
<div
  class="ouiEmptyPrompt"
>
  <span
    class="ouiTextColor ouiTextColor--subdued"
  >
    <div
      class="ouiText ouiText--medium"
    >
      body
    </div>
  </span>
</div>
`;

exports[`OuiEmptyPrompt props icon renders alone 1`] = `
<div
  class="ouiEmptyPrompt"
>
  <span>
    Custom icon
  </span>
  <div
    class="ouiSpacer ouiSpacer--m"
  />
</div>
`;

exports[`OuiEmptyPrompt props iconType renders alone 1`] = `
<div
  class="ouiEmptyPrompt"
>
  <span
    color="subdued"
    data-ouiicon-type="arrowUp"
  />
  <div
    class="ouiSpacer ouiSpacer--m"
  />
</div>
`;

exports[`OuiEmptyPrompt props iconType renders with iconColor 1`] = `
<div
  class="ouiEmptyPrompt"
>
  <span
    color="danger"
    data-ouiicon-type="arrowUp"
  />
  <div
    class="ouiSpacer ouiSpacer--m"
  />
</div>
`;

exports[`OuiEmptyPrompt props title renders alone 1`] = `
<div
  class="ouiEmptyPrompt"
>
  <div
    class="ouiTitle ouiTitle--medium"
  >
    title
  </div>
</div>
`;
